modified:   app/__init__.py 	modified:   templates/base.html 	modified:   templates/edit_cat.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>猫咪信息网站</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
