modified:   .coverage 	modified:   app/routes/auth.py 	modified:   app/routes/base_crud.py 	modified:   app/routes/cats.py 	modified:   app/services/cat_service.py 	modified:   templates/base.html 	modified:   tests/test_routes.py 	modified:   tests/test_routes_auth.py 	modified:   tests/test_routes_cats.py 	modified:   tests/test_services.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
                                 <i class="bi bi-gear"></i> 管理
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('admin.admin_cats_list') }}">猫咪管理</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('admin.admin_users_list') }}">用户管理</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.list_cats') }}">猫咪管理</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.list_users') }}">用户管理</a></li>
                             </ul>
                         </li>
                         {% endif %}
