modified:   app/__init__.py 	deleted:    app/auth.py 	modified:   app/core/health_check.py 	modified:   app/models.py 	modified:   app/routes/admin.py 	modified:   app/routes/auth.py 	modified:   app/routes/cats.py 	modified:   app/services/base_service.py 	modified:   app/services/cat_service.py 	modified:   app/services/user_service.py 	modified:   coverage.xml 	modified:   templates/home.html 	modified:   templates/search.html 	deleted:    tests/base.py 	deleted:    tests/base_test.py 	modified:   tests/conftest.py 	modified:   tests/core/factories/__init__.py 	new file:   tests/core/factories/base.py 	new file:   tests/core/factories/cat.py 	new file:   tests/core/factories/user.py 	new file:   tests/services/cats/conftest.py 	new file:   tests/services/cats/test_cat_service.py 	new file:   tests/services/users/conftest.py 	renamed:    tests/test_reporter.py -> tests/services/users/test_reporter.py 	new file:   tests/services/users/test_user_service.py 	deleted:    tests/test_cat_service.py 	deleted:    tests/test_client.py 	deleted:    tests/test_config.py 	deleted:    tests/test_decorators.py 	deleted:    tests/test_forms.py 	deleted:    tests/test_health_check.py 	deleted:    tests/test_models.py 	deleted:    tests/test_routes.py 	deleted:    tests/test_routes_admin.py 	deleted:    tests/test_routes_auth.py 	deleted:    tests/test_routes_cats_enhanced.py 	modified:   tests/test_services.py 	deleted:    tests/test_services_base.py

--- a/templates/search.html
+++ b/templates/search.html
@@ -87,7 +87,7 @@
                             <p class="card-text">{{ cat.description|truncate(100) }}</p>
                         </div>
                         <div class="card-footer bg-transparent">
-                            <a href="{{ url_for('cats.detail', cat_id=cat.id) }}" 
+    <a href="{{ url_for('cats.admin__detail', id=cat.id) }}"
                                class="btn btn-sm btn-outline-primary">查看详情</a>
                         </div>
                     </div>
