--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.home') }}">
+            <a class="navbar-brand" href="{{ url_for('home') }}">
                 <i class="bi bi-house-heart"></i> 猫咪信息中心
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
